# soma_agent

./: .gitignore  AGENTS.md  CHANGE_LOG.md  Cargo.toml  PENDING_TASKS.md  PROGRESS.md  RUN_REPORT.md  TEST_REPORT.md
fixtures/: custom_image_tool.json  function_calling_weather.json  multi_step_tool_calls.json  parallel_tool_calls.json  reasoning_trace.json
mcp_client/: Cargo.toml
mcp_client/src/: lib.rs
src/: lib.rs
src/backends/: http.rs
src/mcp/: mod.rs
src/tools/: mod.rs  wasm.rs
tests/: http_backend.rs  mcp_integration.rs  parity_fixture.rs  wasm_tool.rs
