[package]
name = "soma_agent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SOMA agent core crate"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11" }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
mcp_client = { path = "mcp_client" }

[dev-dependencies]
httpmock = "0.7.0"
